--------
v5.0-git
--------

[mms] Add ability to select sent-mail mailbox when composing in DIMP.
[mms] Add ability to save drafts in MIMP.
[mms] Add spam reporting in MIMP.
[mms] Added contextmenu support in DIMP for Opera.
[mms] Display HTML parts inline by using IFRAMEs (based on code by
      rui.carneiro@portugalmail.net; Request #8592).
[mms] Add ability to search by relative date intervals (Request #3438).
[mms] Add advanced search query interface to DIMP (Request #6875).
[mms] Add ability to search by a custom defined header (Request #6875).
[mms] Improved advanced search query interface (Request #6875).
[mms] More intelligent ordering of autocomplete search results.
[mms] Add a mini search query interface (Request #6875).
[mms] Make DIMP quicksearch field selection persist across sessions.
[mms] Move JS/CSS caching to Horde framework.
[mms] Add simple search function to MIMP.
[mms] DIMP now honors the 'mailbox_start' preference.
[mms] Logins now handled by Horde login handler.
[mms] When generating and sending compressed ZIP data, use server-side temp
      streams to minimize memory usage.
[mms] Decode bodypart data on server if possible (RFC 3516).
[mms] Use PHP temporary streams when working with message body data to reduce
      memory usage (Request #3359).
[mms] Add ability to expand/collapse all folders in DIMP.
[mms] Add Folder Options menu to DIMP.
[mms] Add save link to full message display in DIMP.
[mms] Allow on-demand filter application (if filter backend supports) in DIMP.
[mms] Add full IMAP subscription support to DIMP.
[mms] Add message information to preview screen (DIMP).
[mms] Add Alt + PGUP/PGDN shortcut to scroll through preview message (DIMP).
[jan] Show possible event conflicts in iTip viewer (Request #3991, Gonçalo
      Queirós <goncalo.queiros@portugalmail.net>).
[mms] Move subfolders of special folders to lower folder display tree in
      DIMP (Bug #8127).
[mms] Simplify quicksearch UI in DIMP.